# for-techno

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
cmd/server/: main.py
core/: logger.py  settings.py
core/_keycloak/: client.py
core/minio/: access.py  client.py
core/postgres/: access.py  client.py
core/redis/: access.py  client.py
infra/: settings.py
infra/keycloak_/: access.py  client.py
infra/keycloak_/config/: keycloak-user-realm.json
infra/llama3/: access.py  client.py
infra/minio/: access.py  client.py
infra/minio/config/: Dockerfile  create-bucket.sh
infra/postgres/: __all_models.py  access.py  client.py
infra/redis/: access.py  client.py
internal/: __init__.py
internal/download/api/v1/: routers.py
internal/download/repository/: repository.py
internal/download/usecase/: usecase.py
internal/healthcheck/api/v1/: routers.py
internal/healthcheck/schemes/: healthcheck.py
internal/superadmin/api/v1/: routers.py
internal/superadmin/repository/: repository.py
internal/superadmin/schemes/: superadmin.py
internal/superadmin/usecase/: usecase.py
internal/user/api/v1/: routers.py
internal/user/models/: users.py
internal/user/repository/: repository.py
internal/user/schemes/: users.py
internal/user/usecase/: usecase.py
pkg/: exceptions.py
pkg/exceptions/: __init__.py  exceptions.py  schemes.py
