[project]
name = "for-techno"
version = "1.0.0"
description = ""
authors = [
    {name = "Alexandr Mikhalchenkov",email = "mikhalchenkov22@gmail.com"}
]
license = {text = "MIT License (https://opensource.org/licenses/MIT)"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiobotocore (>=2.21.1,<3.0.0)",
    "types-aiobotocore-s3 (>=2.21.1,<3.0.0)",
    "fastapi-keycloak (>=1.0.11,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
